# ESPOS

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .editorconfig  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .sim_config.json  ADVANCED_FEATURES.md  AGENTS.md  CHECKLIST.md  CMakeLists.txt  COLLABORATIVE_WEB_DESIGNER.md  CONTRIBUTING.md  DARK_MODE.md  DESIGN_ENHANCEMENT_PLAN.md  DONE.md  FEATURE_EXPANSION_SUMMARY.md  FILE_INDEX.md  HOW_TO_START.md  IMPLEMENTATION_SUMMARY.md  INSTALLER_GUIDE.md  ISSUE_10_IMPLEMENTATION.md  NATIVE_TESTS_WINDOWS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_PROFILER_EXPANSION.md  PROFILER_REPORT.md  PROJECT_OVERVIEW.md  PROJECT_ROADMAP.md  QUICKSTART.md  QUICK_START.md  README.md  README.txt  README_UI_RENDER.md  SECURITY.md  SHARED_UNDO_REDO_GUIDE.md  SIMULATOR_EXAMPLES.md  SIMULATOR_README.md  START_HERE.md  TECH_STACK.md  (+173 more)
.githooks/: pre-commit
.github/: CONTRIBUTING.md  dependabot.yml
PIL-stubs/: Image.pyi  ImageDraw.pyi  __init__.pyi
__pycache__/: animation_pulse.json  theme_cyberpunk.json
cyberpunk_designer/: __init__.py  __main__.py  app.py  build_flash.py  component_fields.py  component_insert.py  components.py  components_display.py  components_input.py  components_nav.py  components_shared.py  constants.py  context_menu.py  drawing.py  fit_text.py  fit_widget.py  focus_nav.py  focus_nav_sim.py  font6x8.py  groups.py  icon_palette.py  input_handlers.py  inspector_commit.py  inspector_handlers.py  inspector_logic.py  inspector_utils.py  inspector_values.py  io_ops.py  key_handlers.py  layout.py  perf.py  (+12 more)
(+735 files in other folders)
