[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esp32os"
version = "0.1.0"
description = "ESP32 OS simulator, UI designer, and tooling"
authors = [{ name = "ESP32OS" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
ui = [
  "pillow>=10.0.0",
]
hw = [
  "pyserial>=3.5",
]
web = [
  "websockets>=12.0",
]
metrics = [
  "psutil>=5.9",
]

input = [
  "pygame>=2.5",
]

dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=24.3",
  "ruff>=0.4.5",
  "mypy>=1.7",
  "pre-commit>=3.7",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["."]

